--- a/src/app/stars/star-details/star-details.component.html
+++ b/src/app/stars/star-details/star-details.component.html
@@ -2,10 +2,10 @@
   <div class="card-header"><h3>{{selectedStar.name}}</h3></div>
   <div class="card-body">
     <p><strong>Spektraltyp des Sterns:</strong>{{selectedStar.spectralType}}</p>
-    <p><strong>Masse:</strong>{{selectedStar.solarMass}} M</p>
-    <p><strong>Radius:</strong>{{selectedStar.solarRadius}} R</p>
-    <p><strong>Effektive Temperatur:</strong>{{selectedStar.effectiveTemperature}} K</p>
-    <p><strong>Entfernung zur Erde:</strong>{{selectedStar.distance}} Lj</p>
+    <p><strong>Masse: </strong>{{selectedStar.solarMass}} <em tooltip="Sonnenmasse">M☉</em></p>
+    <p><strong>Radius: </strong>{{selectedStar.solarRadius}} <em tooltip="Sonnenradius">R☉</em></p>
+    <p><strong>Effektive Temperatur: </strong>{{selectedStar.effectiveTemperature}} <em tooltip="Kelvin">K</em></p>
+    <p><strong>Entfernung zur Erde: </strong>{{selectedStar.distance}} <em tooltip="Lichtjahr">Lj</em></p>
   </div>
   <div class="card-footer">
     <h5>Umkreisende Planeten:</h5>
