--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -12,21 +12,21 @@
     </div>
     <div class="form-group col-md-6">
       <label for="distance">Entfernung von der Erde:</label>
-      <input type="text" class="form-control" formControlName="distance" id="distance">
+      <input type="number" class="form-control" formControlName="distance" id="distance">
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-4">
       <label for="solarMass">Masse:</label>
-      <input type="text" class="form-control" formControlName="solarMass" id="solarMass">
+      <input type="number" class="form-control" formControlName="solarMass" id="solarMass">
     </div>
     <div class="form-group col-md-4">
       <label for="solarRadius">Radius:</label>
-      <input type="text" class="form-control" formControlName="solarRadius" id="solarRadius">
+      <input type="number" class="form-control" formControlName="solarRadius" id="solarRadius">
     </div>
     <div class="form-group col-md-4">
       <label for="effectiveTemperature">Effektive Temperatur:</label>
-      <input type="text" class="form-control" formControlName="effectiveTemperature" id="effectiveTemperature">
+      <input type="number" class="form-control" formControlName="effectiveTemperature" id="effectiveTemperature">
     </div>
   </div>
   <hr>
@@ -48,27 +48,27 @@
           </div>
           <div class="form-group col-md-6">
             <label for="planetPeriod">Umlaufzeit:</label>
-            <input type="text" class="form-control" formControlName="planetPeriod" id="planetPeriod">
+            <input type="number" class="form-control" formControlName="planetPeriod" id="planetPeriod">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="planetMass">Masse:</label>
-            <input type="text" class="form-control" formControlName="planetMass" id="planetMass">
+            <input type="number" class="form-control" formControlName="planetMass" id="planetMass">
           </div>
           <div class="form-group col-md-6">
             <label for="planetRadius">Radius:</label>
-            <input type="text" class="form-control" formControlName="planetRadius" id="planetRadius">
+            <input type="number" class="form-control" formControlName="planetRadius" id="planetRadius">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="planetDistance">Entfernung:</label>
-            <input type="text" class="form-control" formControlName="planetDistance" id="planetDistance">
+            <input type="number" class="form-control" formControlName="planetDistance" id="planetDistance">
           </div>
           <div class="form-group col-md-6">
             <label for="planetESI">Erdähnlichkeitsindex:</label>
-            <input type="text" class="form-control" formControlName="planetESI" id="planetESI">
+            <input type="number" class="form-control" formControlName="planetESI" id="planetESI">
           </div>
         </div>
 
