--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -13,7 +13,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let planet of planets">
+      <tr *ngFor="let planet of planets" [ngClass]="planet === planetService ? 'table-warning' : ''">
         <td>{{planet.planetName}}</td>
         <td>{{planet.planetClass == null ? 'unbekannt' : planet.planetClass}}</td>
         <td>{{planet.planetMass == null ? 'unbekannt' : planet.planetMass}}</td>
