--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -13,14 +13,14 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let planet of planets" [ngClass]="planet === planetService ? 'table-warning' : ''">
+      <tr *ngFor="let planet of planets" [ngClass]="'table-warning'">
         <td>{{planet.planetName}}</td>
-        <td>{{planet.planetClass == null ? 'unbekannt' : planet.planetClass}}</td>
-        <td>{{planet.planetMass == null ? 'unbekannt' : planet.planetMass}}</td>
-        <td>{{planet.planetRadius == null ? 'unbekannt' : planet.planetRadius}}</td>
-        <td>{{planet.planetPeriod == null ? 'unbekannt' : planet.planetPeriod}}</td>
-        <td>{{planet.planetDistance == null ? 'unbekannt' : planet.planetDistance}}</td>
-        <td>{{planet.planetESI == null ? 'unbekannt' : planet.planetESI}}</td>
+        <td>{{planet.planetClass == (null || '') ? 'unbekannt' : planet.planetClass}}</td>
+        <td>{{planet.planetMass == (null || '') ? 'unbekannt' : planet.planetMass}}</td>
+        <td>{{planet.planetRadius == (null || '') ? 'unbekannt' : planet.planetRadius}}</td>
+        <td>{{planet.planetPeriod == (null || '') ? 'unbekannt' : planet.planetPeriod}}</td>
+        <td>{{planet.planetDistance == (null || '') ? 'unbekannt' : planet.planetDistance}}</td>
+        <td>{{planet.planetESI == (null || '') ? 'unbekannt' : planet.planetESI}}</td>
       </tr>
       </tbody>
     </table>
