--- a/src/app/stars/star-edit/star-edit.component.css
+++ b/src/app/stars/star-edit/star-edit.component.css
@@ -1,3 +1,24 @@
-input.ng-invalid.ng-touched{
+input.ng-invalid.ng-touched {
   border: 1px solid red;
+}
+
+.inline-header {
+  display: inline-block;
+}
+
+.card {
+  margin-bottom: 2px;
+}
+
+.comment-light {
+  color: grey;
+}
+
+.help-right {
+  float: right;
+  color: red;
+}
+
+.label-block {
+  display: block;
 }
