changed the text in the label

--- a/src/app/stars/star-edit/star-edit.component.html
+++ b/src/app/stars/star-edit/star-edit.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group col-md-6">
       <label class="label-block" for="distance">
-        Entfernung von der Erde:
+        Entfernung zur Erde:
         <em class="comment-light" tooltip="Lichtjahr">(in Lj)</em>
         <span class="help-block help-right" *ngIf="!editStarForm.get('distance').valid">keine Zahl</span>
       </label>
