--- a/src/app/stars/star-add/star-add.component.html
+++ b/src/app/stars/star-add/star-add.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="form-group col-md-6">
       <label class="label-block" for="distance">
-        Entfernung von der Erde:
+        Entfernung zur Erde:
         <em class="comment-light" tooltip="Lichtjahr">(in Lj)</em>
         <span class="help-block help-right" *ngIf="!newStarForm.get('distance').valid">keine Zahl</span>
       </label>
