--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,6 +13,9 @@
   </ul>
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item">
+      <a class="nav-link" role="button" routerLink="/signup">Registrieren</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><i
         class="fa fa-github white-icon"></i>
       </a>
