fixed the the checking of the email match in the DB

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -11,8 +11,8 @@
             <label class="card-text" for="password">Passwort</label>
             <input class="form-control" type="password" id="password" name="password" ngModel required>
           </div>
-          <span class="help-block">{{helpMessage}}</span>
           <button class="btn btn-primary" type="submit">Registrieren</button>
+          <div><span class="help-block">{{helpMessage}}</span></div>
         </form>
       </div>
     </div>
