--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -3,6 +3,7 @@
     <div class="card">
       <div class="card-body text-center">
         <form (ngSubmit)="onSignup(f)" #f="ngForm">
+          <div><h6>Bitte keine echte Daten eingeben!</h6></div>
           <div class="form-group">
             <label class="card-text" for="email">E-Mail</label>
             <input class="form-control" type="email" id="email" name="email" ngModel required>
