--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,25 +12,13 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item">
+    <!--<li class="nav-item">
       <a class="nav-link" role="button" routerLink="/signup">Registrieren</a>
-    </li>
+    </li>-->
     <li class="nav-item">
       <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><i
         class="fa fa-github white-icon"></i>
       </a>
     </li>
-
-
-
-    <!--<li class="nav-item dropdown" dropdown>
-      <a class="nav-link dropdown-toggle" role="button" id="navbardrop" data-toggle="dropdown" dropdownToggle>
-        Konto
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" *dropdownMenu>
-        <a class="dropdown-item" href="#">Registrieren</a>
-        <a class="dropdown-item" href="#">Einloggen</a>
-      </div>
-    </li>-->
   </ul>
 </nav>
