buttons to navigate to the signin and signup pages

--- a/src/app/stars/stars-welcome/stars-welcome.component.html
+++ b/src/app/stars/stars-welcome/stars-welcome.component.html
@@ -1,2 +1,11 @@
-<h4>Willkommen zum Sternkatalog!</h4>
-<h5>Wählen Sie einen Stern, um mehr Infos zu bekommen.</h5>
+<div class="row justify-content-md-center justify-content-sm-center">
+  <div class="col-md">
+    <h4>Willkommen zum Sternkatalog!</h4>
+    <p>Als Gast können Sie keine Daten ändern.
+      Um die Daten zu bearbeiten melden Sie sich bitte an(Mail: test@mail.de, Passwort: passwort oder mit eigenen Daten).
+      <br>
+      Kein Konto? Dann sofort registrieren!(Keine echte Daten benötigt)</p>
+    <button type="button" class="btn btn-outline-primary" routerLink="/signin">Anmelden</button>
+    <button type="button" class="btn btn-outline-primary" routerLink="/signup">Registrieren</button>
+  </div>
+</div>
