--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-md-4 panel-border">
     <div class="btn-group btn-block">
-      <button type="button" class="btn btn-outline-primary" (click)="onAddStar()"><span
-        class="fa fa-plus-square-o"></span> Hinzufügen
+      <button type="button" class="btn btn-outline-primary" (click)="onAddStar()">
+        <span class="fa fa-plus-square-o"></span> Neu
       </button>
-      <button type="button" class="btn btn-outline-success" (click)="onEditStar()"><span class="fa fa-edit"></span>
-        Editieren
+      <button type="button" class="btn btn-outline-success" (click)="onEditStar()">
+        <span class="fa fa-edit"></span> Bearbeiten
       </button>
-      <button type="button" class="btn btn-outline-danger" (click)="onRemoveStar()"><span
-        class="fa fa-minus-square-o"></span> Entfernen
+      <button type="button" class="btn btn-outline-danger" (click)="onRemoveStar()">
+        <span class="fa fa-minus-square-o"></span> Entfernen
       </button>
     </div>
     <hr>
