added konto dropdown to navbar

--- a/src/app/stars/stars-welcome/stars-welcome.component.html
+++ b/src/app/stars/stars-welcome/stars-welcome.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-md-center justify-content-sm-center">
-  <div class="col-md">
+  <div class="col-sm col-md text-center">
     <h4>Willkommen zum Sternkatalog!</h4>
     <p>Als Gast können Sie keine Daten ändern.
       Um die Daten zu bearbeiten melden Sie sich bitte an(Mail: test@mail.de, Passwort: passwort oder mit eigenen Daten).
