--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,8 +13,8 @@
   </ul>
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item" dropdown>
-      <a class="nav-link" role="button" aria-controls="dropdown-basic" dropdownToggle>Konto<span
-        class="caret"></span></a>
+      <a class="nav-link dropdown-toggle" role="button" aria-controls="dropdown-basic" dropdownToggle><span
+        class="caret"></span>Konto</a>
       <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
           role="menu" aria-labelledby="button-basic">
         <li role="menuitem" *ngIf="!auth.isLoggedIn()">
