--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -15,7 +15,7 @@
     <li class="nav-item" dropdown>
       <a class="nav-link dropdown-toggle" role="button" aria-controls="dropdown-basic" dropdownToggle><span
         class="caret"></span>Konto</a>
-      <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+      <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-left"
           role="menu" aria-labelledby="button-basic">
         <li role="menuitem" *ngIf="!auth.isLoggedIn()">
           <a class="dropdown-item" routerLink="/signin">Anmelden</a>
