Modified profile component to display user data

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,17 @@
-<p>
-  profile works!
-</p>
+<div class="row justify-content-md-center justify-content-sm-center">
+  <div class="col-sm col-md text-center">
+    <h4>Mein Profil</h4>
+    <table class="table-borderless">
+      <tbody>
+      <tr>
+        <td>Name:</td>
+        <td>{{details?.name}}</td>
+      </tr>
+      <tr>
+        <td>E-Mail:</td>
+        <td>{{details?.email}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
