--- a/src/app/stars/stars-nav/stars-nav.component.html
+++ b/src/app/stars/stars-nav/stars-nav.component.html
@@ -1,4 +1,4 @@
-<div class="row padding-botton">
+<div class="row padding-bottom">
   <div class="col-md-8 divider-right"><input class="form-control" type="text" placeholder="Suche..."
                                              (keyup)="filterStarList()" #searchFilter></div>
   <div class="col-md-4">
