--- a/src/app/stars/stars-welcome/stars-welcome.component.html
+++ b/src/app/stars/stars-welcome/stars-welcome.component.html
@@ -1,11 +1,18 @@
-<div class="row justify-content-md-center justify-content-sm-center">
-  <div class="col-sm col-md text-center">
-    <h4>Willkommen zum Sternkatalog!</h4>
-    <p>Als Gast können Sie keine Daten ändern.
-      Um die Daten zu bearbeiten melden Sie sich bitte an(Mail: test@mail.de, Passwort: passwort oder mit eigenen Daten).
-      <br>
-      Kein Konto? Dann sofort registrieren!(Keine echte Daten benötigt)</p>
-    <button type="button" class="btn btn-outline-primary" routerLink="/signin">Anmelden</button>
-    <button type="button" class="btn btn-outline-primary" routerLink="/signup">Registrieren</button>
+<div class="row justify-content-md-center justify-content-sm-center limited-height">
+  <div class="col-sm-10 col-md-8 text-center vertical-center">
+    <div *ngIf="!auth.isLoggedIn();else infoBlock">
+      <h4>Willkommen zum Sternkatalog!</h4>
+      <p>Als Gast können Sie keine Daten ändern.
+        Um die Daten zu bearbeiten melden Sie sich bitte an(Mail: test@testmail.de, Passwort: passwort oder mit eigenen
+        Daten).
+        <br>
+        Kein Konto? Dann sofort registrieren!(Keine echte Daten benötigt)</p>
+      <button type="button" class="btn btn-outline-primary" routerLink="/signin">Anmelden</button>
+      <button type="button" class="btn btn-outline-primary" routerLink="/signup">Registrieren</button>
+    </div>
+    <ng-template #infoBlock>
+      <p>Sie sind eingeloggt und berechtigt die Daten zu ändern. Bitte fühlen Sie sich frei, neue Sterne zu
+        registrieren, bearbeiten und löschen.</p>
+    </ng-template>
   </div>
 </div>
