--- a/src/app/stars/star-add/star-add.component.css
+++ b/src/app/stars/star-add/star-add.component.css
@@ -1,7 +1,3 @@
-input.ng-invalid.ng-touched{
-  border: 1px solid red;
-}
-
 .inline-header{
   display: inline-block;
 }
@@ -18,4 +14,12 @@ input.ng-invalid.ng-touched{
 }
 .label-block{
   display: block;
+}
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
 }
