--- a/src/app/stars/star-edit/star-edit.component.css
+++ b/src/app/stars/star-edit/star-edit.component.css
@@ -1,5 +1,9 @@
-input.ng-invalid.ng-touched {
-  border: 1px solid red;
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
 }
 
 .inline-header {
