--- a/src/app/stars/star-add/star-add.component.css
+++ b/src/app/stars/star-add/star-add.component.css
@@ -16,7 +16,7 @@
   display: block;
 }
 
-.ng-valid[required], .ng-valid.required  {
+.ng-valid  {
   border-left: 5px solid #42A948; /* green */
 }
 
