--- a/src/app/stars/stars-welcome/stars-welcome.component.html
+++ b/src/app/stars/stars-welcome/stars-welcome.component.html
@@ -11,8 +11,8 @@
       <button type="button" class="btn btn-outline-primary" routerLink="/signup">Registrieren</button>
     </div>
     <ng-template #infoBlock>
-      <p>Sie sind eingeloggt und berechtigt die Daten zu ändern. Bitte fühlen Sie sich frei, neue Sterne zu
-        registrieren, bearbeiten und löschen.</p>
+      <h6>Sie sind eingeloggt und berechtigt die Daten zu ändern. Bitte fühlen Sie sich frei, neue Sterne zu
+        registrieren, bearbeiten und löschen.</h6>
     </ng-template>
   </div>
 </div>
