--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" role="button" routerLink="/stars">Sterne</a>
+      <a class="nav-link" role="button" routerLink="/stars" act>Sterne</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" role="button" routerLink="/planets">Planeten</a>
