--- a/src/app/stars/star-add/star-add.component.css
+++ b/src/app/stars/star-add/star-add.component.css
@@ -1,3 +1,11 @@
+.ng-valid.ng-dirty  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
+
 .inline-header{
   display: inline-block;
 }
@@ -14,12 +22,4 @@
 }
 .label-block{
   display: block;
-}
-
-.ng-valid  {
-  border-left: 5px solid #42A948; /* green */
-}
-
-.ng-invalid:not(form)  {
-  border-left: 5px solid #a94442; /* red */
 }
