--- a/src/app/stars/star-edit/star-edit.component.css
+++ b/src/app/stars/star-edit/star-edit.component.css
@@ -1,10 +1,11 @@
-.ng-valid{
+.ng-valid.ng-dirty  {
   border-left: 5px solid #42A948; /* green */
 }
 
 .ng-invalid:not(form)  {
   border-left: 5px solid #a94442; /* red */
 }
+
 
 .inline-header {
   display: inline-block;
