--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -4,10 +4,10 @@
 
   <!-- Links -->
   <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" role="button" routerLink="/stars" act>Sterne</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" role="button" routerLink="/stars">Sterne</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" routerLinkActive="active">
       <a class="nav-link" role="button" routerLink="/planets">Planeten</a>
     </li>
   </ul>
