--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,11 +1,11 @@
 <div class="row justify-content-md-center justify-content-sm-center">
-  <div class="form-horizontal">
+  <div class="col-md-4 form-horizontal">
     <div class="form-group">
-      <label class="col-sm-3 control-label">Name</label>
+      <label class="control-label">Name</label>
       <p class="form-control-static">{{ details?.name }}</p>
     </div>
     <div class="form-group">
-      <label class="col-sm-3 control-label">E-Mail</label>
+      <label class="control-label">E-Mail</label>
       <p class="form-control-static">{{ details?.email }}</p>
     </div>
   </div>
