--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-md-center justify-content-sm-center">
-  <div class="col-md-4 vertical-center">
+  <div class="col-md-4 vertical-center text-center">
     <h4>Dein Profil</h4>
     <table class="table table-borderless">
       <tbody>
