--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,7 +12,7 @@
     </li>
   </ul>
   <ul class="nav navbar-nav ml-auto">
-    <li class="nav-item" dropdown>
+    <li class="nav-item" dropdown routerLinkActive="active">
       <a class="nav-link dropdown-toggle" role="button" aria-controls="dropdown-basic" dropdownToggle><span
         class="caret"></span>Konto</a>
       <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu dropdown-menu-right"
@@ -31,20 +31,9 @@
         </li>
       </ul>
     </li>
-    <!-- <div class="btn-group" dropdown>
-       <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
-               aria-controls="dropdown-basic">
-         Konto <span class="caret"></span>
-       </button>
-       <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
-           role="menu" aria-labelledby="button-basic">
-         <li role="menuitem"><a class="dropdown-item">Anmelden</a></li>
-         <li role="menuitem"><a class="dropdown-item">Registrieren</a></li>
-       </ul>
-     </div>-->
     <li class="nav-item">
-      <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets"><i
-        class="fa fa-github white-icon"></i>
+      <a class="nav-link" role="button" href="https://github.com/valentinprotiuc/stars-and-planets">
+        <i class="fa fa-github white-icon"></i>
       </a>
     </li>
   </ul>
